Introduce threading control functions in the native namespace.