@@ -37,7 +37,8 @@
                            :themes [:rdash]
                            :namespaces [uncomplicate.neanderthal.opencl]
                            :output-path "../docs/codox"}
-                   :jvm-opts ^:replace ["-Dclojure.compiler.direct-linking=true"]}}
+                   :jvm-opts ^:replace ["-Dclojure.compiler.direct-linking=true"
+                                         "--enable-native-access=ALL-UNNAMED"]}}
 
   :repositories [["snapshots" "https://oss.sonatype.org/content/repositories/snapshots"]]
 
